--- a/src/main/resources/webserver/template/movie/user/index.html
+++ b/src/main/resources/webserver/template/movie/user/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="ui container" style="margin-bottom: 20px;">
-        <h1 class="ui header top attached">Demn&auml;chst anschauen <a class="ui button right floated" href="/movie/viewsonnmovies">alle</a></h1>
+        <h1 class="ui header top attached">Demn&auml;chst anschauen <a class="ui button right floated" href="/movie/viewsoonmovies">alle</a></h1>
         <div class="ui link cards four column doubling stackable bottom attached">
             {% for i in [1, 2, 3, 4] %}
             <div class="card" onclick="window.location = '/detailView/{{this.id}}#a{{this.id}}'">
